--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     <div class="image-container">
         <a href="https://example.com" target="_blank">
-            <img src="valentine_image.jpg" alt="Сюрприз">
+            <img src="./img/valentine_image.jpg" alt="Сюрприз">
         </a>
     </div>
 
