--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,7 @@
     
     <div class="image-container">
         <a href="https://example.com" target="_blank">
-            <img src="qr.jpg" alt="Сюрприз">
+            <img src="./img/qr.jpg" alt="Сюрприз">
         </a>
     </div>
 
